build/deployment/inventario/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-inventario
  namespace: inventario
  labels:
    app.kubernetes.io/name: inventario
    app.kubernetes.io/part-of: inventario
spec:
  type: LoadBalancer
  externalIPs: 128.5.9.71
  selector:
    run: laravel-inventario
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
